# trader

./: .gitignore  README.md  SAAS_ROADMAP.md  SETUP.md  docker-compose.yml  install-service.ps1  run-backend.bat  run-frontend.bat
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 051877be6d50_multi_tenant_user_id.py  1f688594b895_screener_fundamentals.py  334697509213_init_schema.py  3f514f5adb65_earnings_dates.py  49b4f475d58a_equity_snapshots_for_drawdown_breaker.py  90ed3f72c11f_add_screener_schema.py  9c7b64c64f48_charter_versions_and_account_cash_flows.py  a1b2c3d4e5f6_watchlist_items.py  a8edf754a8f4_options_and_exit_ladder.py  b3c1d4e2f5a7_screener_eps_smr_ranks.py  c4e5f6a7b8d9_trailing_actions.py  d5e6f7a8b9c0_pattern_buyability.py  e5cdb44ca11c_ticket_close_journal.py  e6f7a8b9c0d1_bigint_volume.py  f7a8b9c0d1e2_earnings_annual_growth.py  g8h9i0j1k2l3_widen_growth_columns.py  h9i0j1k2l3m4_wheel_candidates.py  i0j1k2l3m4n5_broker_history.py  j1k2l3m4n5o6_backtest_scan_cache.py  k2l3m4n5o6p7_ml_ranker.py
backend/app/: config.py  main.py
backend/app/api/: accounts.py  auth.py  backtest.py  broker_history.py  chart.py  charter.py  (+15 more)
backend/scripts/: claim_data.py
backend/tests/: conftest.py  factories.py  test_active_account.py  test_broker_history_fifo.py  test_charter_service.py  test_drawdown.py  test_guardrail_service.py  test_ml_features.py  test_ml_labels.py  test_ml_ranker.py  test_odds_service.py  test_order_flow.py  test_pattern_pivot.py  test_scan_lock.py  test_sizing_service.py  test_streak_service.py
(+124 files in other folders)
