[project]
name = "trader-backend"
version = "0.1.0"
description = "Personal trading discipline tool — backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
data = [
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]
ml = [
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
